--- a/_config.yml
+++ b/_config.yml
@@ -22,14 +22,14 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  avatar           : "IMG_6539.png"
+  name             : "Haoran Zhu"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  bio              : "可可爱爱没有脑袋"
+  location         : "China"
+  employer         : "Northwest University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "89427484@qq.com" 
 
   # Academic websites
   academia         : # URL
